# health-data-pipeline

./: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README-LABS.md  README.md  cleanorphans.sh  common.py  config.yaml  config.yaml.template  pyproject.toml  pytest.ini  requirements.txt  test_concept2.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
_archive/ingest/: utils.py
analysis/: README.md  last_concept2_workout.py
analysis/apps/: SETUP_GUIDE.md  hdp_correlation_explorer.py  hdp_dashboard.py  hdp_interactive_dashboard.py  hdp_streamlit_dashboard.py
analysis/docs/: Analysis_Ideas_Backlog_Addition.md  EPIC_Weekly_Training_Coach.md  (+2 more)
deploy/: .dockerignore  Dockerfile  README.md
docs/: Analysis_Strategy.md  Architecture.md  DEPLOYMENT.md  DataSources.md  Deployment.md  ENERGY_BALANCE_FEATURE_PLAN.md  HDP_Dashboard_Addendum_Scores.md  HDP_Dashboard_Requirements.md  HDP_Dashboard_VO2_Migration.md  HDP_Lactate_Data_Model.md  HDP_VO2_3Gate_Implementation.md  HDP_v2.0_Update_Summary.md  HealthDataPipelineArchitecture.md  HealthDataPipelineDesign.md  HealthDataPipelineSchema.md  INTERACTIVE_DASHBOARD_GUIDE.md  LABS_IMPLEMENTATION_GUIDE.md  LABS_PROTOCOL_DESIGN.md  PartitioningAndWriteStrategies.md  STRUCTURE.md  Schema.md  StorageAndQuery.md  TimestampHandling.md  lactate_measurement_protocol.md
ingest/: csv_delta.py  utils.py
scratch/: concept2_api_explore.py  get_workout.py  ingest_concept2_by_id.py  output.txt  quick.py  test_jefit_ingestion.py
scripts/: analyze_maintenance.py  backfill_lactate.py  bootstrap_history.py  concept2_oauth.py  debug_arrow_read.py  debug_concept2_types.py  detect_gaps.py  export_for_deploy.py  fetch_drive_sources.py  fetch_latest_lab_excel.py  fetch_oura_history.py  hdp_drive_fetcher.py  manual_lactate_fix.py  repair_data.py  setup_oura.py  validate_parquet_tables.py  verify_concept2_data.py
tests/: test_ingest_smoke.py  test_scores.py
validate/: checks.py
(+3224 files in other folders)
